Closed Bug 828157 Opened 13 years ago Closed 13 years ago

SVG / radialGradient - focal point of radial gradient not rendered correctly

Categories

(Core :: Graphics, defect)

15 Branch
x86_64
Windows 8
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: kivoin, Assigned: bas.schouten)

References

Details

(Keywords: regression)

Attachments

(5 files)

Attached image firebug.svg
User Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:18.0) Gecko/20100101 Firefox/18.0 Build ID: 20130104151925 Steps to reproduce: I'm trying to get SVG image look same as with other browsers and SVG editors. Actual results: Firefox won't show SVG radialGradient's correctly. Expected results: Firefox should show SVG radialGradient's same as other browsers and SVG editors do.
Attached image Differences
Screenshot of Firefox 18, Opera 12.12, and Chromium 25 with the testcase, on Windows XP with no hardware acceleration.
Component: Untriaged → SVG
Product: Firefox → Core
So this only seems to happen with HWA. On my unaccelerated Vista machine it's OK. kivoin is this something that was OK in Firefox 17?
Flags: needinfo?(kivoin)
kivoin: to confirm if the testcase works with HWA off, go to Firefox -> Options, "Advanced" section, "General" tab, untick "Use hardware acceleration when available".
Setting/unsetting HWA on a Windows 7 machine that supports HWA breaks/fixes the drawing for me.
Status: UNCONFIRMED → NEW
Ever confirmed: true
(In reply to Robert Longson from comment #3) > So this only seems to happen with HWA. On my unaccelerated Vista machine > it's OK. > > kivoin is this something that was OK in Firefox 17? Problem appears with 17.0.1 also
Flags: needinfo?(kivoin)
(In reply to Mardeg from comment #4) > kivoin: to confirm if the testcase works with HWA off, go to Firefox -> > Options, "Advanced" section, "General" tab, untick "Use hardware > acceleration when available". After turning HWA off, it shows SVG correctly. But if I turn it back on (and after restart) problem comes back.
I don't think it's a SVG bug, more graphics about Azure. Regression range with HWA enabled (Win 7): m-c good=2012-05-23 bad=2012-05-24 http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=36e938e51481&tochange=f43e8d300f21 m-i good=2012-05-21 bad=2012-05-22 http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=de36859eb332&tochange=219dc3f47568 Suspected bug: Bas Schouten — Bug 715768: Enable Azure-Thebes wrapper by default for D2D. r=jrmuizel In addition, there is a similar bug, see bug 820988. Workaround: gfx.content.azure.enabled = false fixes the issue.
Blocks: 715768
Component: SVG → Graphics
Keywords: regression
Version: 18 Branch → 15 Branch
Definitely looks like Azure-Thebes. Investigating.
Attachment #700485 - Flags: review?(jmuizelaar)
Comment on attachment 700485 [details] [diff] [review] Properly offset gradient origin Review of attachment 700485 [details] [diff] [review]: ----------------------------------------------------------------- This should have a test.
Attachment #700485 - Flags: review?(jmuizelaar) → review-
(In reply to Jeff Muizelaar [:jrmuizel] from comment #11) > Comment on attachment 700485 [details] [diff] [review] > Properly offset gradient origin > > Review of attachment 700485 [details] [diff] [review]: > ----------------------------------------------------------------- > > This should have a test. That does sound lovely, but I'm unsure of how we could create a similar rendering without using the same features.
This issue exist in version 19. Is there estimated time frame for fixes?
Severity: normal → major
Version: 15 Branch → 19 Branch
Plsea, don't play with the flags if you don't know them, thanks.
Severity: major → normal
Version: 19 Branch → 15 Branch
Attached patch patchSplinter Review
(In reply to Bas Schouten (:bas.schouten) from comment #12) > That does sound lovely, but I'm unsure of how we could create a similar > rendering without using the same features. Here's a test that will do that, and hopefully unblock Jeff's review. I've checked that it fails on Windows 7, but if you want to double check and r+, Bas, that'd be great.
Attachment #717044 - Flags: review?(bas)
Comment on attachment 700485 [details] [diff] [review] Properly offset gradient origin r+ with the test
Attachment #700485 - Flags: review- → review+
Attachment #717044 - Flags: review?(bas) → review+
Bas, can you land this please?
Summary: SVG radialGradient with stop-colors doesn't show correctly in Firefox → SVG / radialGradient - focal point of radial gradient not rendered correctly
Both reviewed patches need to be checked in.
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
Why won't this be fixed in Firefox 20 and 21?
Flags: needinfo?(emorley)
I'#m not the patch author, you are best off asking Bas/jwatt. That said, changes first land on mozilla-central (which is at version 22) and if deemed low enough risk/high enough reward, can be nominated for uplift to the aurora (v21) and beta (v20) branches.
Flags: needinfo?(emorley)
So, could this also be landed on aurora and beta Bas?
Flags: needinfo?(bas)
Finally resolved with the just released Firefox 22.
Flags: needinfo?(bas)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: