Bug 828157 - Properly offset gradient origin when using D2D to draw moderately complex gradients. r=jmuizelaar